syntax = "proto3";

package file;

option go_package = "./pb";

message ListFileRequest {};
message ListFileResponse {
  repeated string filename = 1;
};

message DownloadRequest {
  string filename = 1;
}

message DownloadResponse {
  bytes data = 1;
}



service FileService {
  rpc ListFiles (ListFileRequest) returns (ListFileResponse);
  rpc Download (DownloadRequest) returns (stream DownloadResponse);
}